<resources>
    <string name="app_name">MovieApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="not_have_account">Belum Punya Akun?</string>
    <string name="username">Username</string>
</resources>